# easy_paste

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/: ralph-loop.local.md  settings.json
plan/: enchanted-booping-dragonfly.md  graceful-marinating-chipmunk.md  starry-prancing-treehouse.md  tidy-weaving-stearns.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs  window_position.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/commands/: clipboard.rs  history.rs  mod.rs
src-tauri/src/database/: models.rs
src/components/: Settings.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx
src/hooks/: useClipboardListener.ts  useHistory.ts
src/lib/: api.ts
src/types/: clipboard.ts
