[package]
name = "easy-paste"
version = "0.1.0"
description = "A cross-platform clipboard manager"
authors = ["you"]
edition = "2021"

[lib]
name = "easy_paste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
arboard = "3"
base64 = "0.22"
sha2 = "0.10"
dirs = "5"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
